# Cork

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  main.py  requirements.txt  roblox.py  setup.py  vcpkg-configuration.json  vcpkg.json  wine.py
.github/workflows/: build-debian-aarch64.yml  build-fedora-amd64.yml  build-ubuntu-aarch64.yml  build-ubuntu-amd64.yml  build-ubuntu-ppc64le.yml  build-windows-amd64.yml  build.yml  package-fedora-amd64.yml  package-ubuntu-amd64.yml
cork/: __init__.py  __main__.py  rbxcdn.py  roblox.py  splash.py  utils.py  wine.py
cork/bootstrapper/: installer.py  session.py
cork/roblox/: cdn.py  packages.py  version.py
cork/runners/: native.py  wine.py
distribution/: roblox-player.desktop
resources/: roblox-player.desktop  roblox-studio.desktop
src/: CMakeLists.txt  main.cpp
src/bootstrapper/: CMakeLists.txt  environment.cpp  environment.hpp  installer.cpp  installer.hpp
src/roblox/: CMakeLists.txt  cdn.cpp  cdn.hpp  packages.cpp  packages.hpp  version.cpp  version.hpp
src/runners/: CMakeLists.txt  native.cpp  native.hpp  wine.cpp  wine.hpp
src/settings/: CMakeLists.txt  default.hpp  settings.cpp  settings.hpp
